Reintroduce numApply, and make it visible to users. Fix problem with "/[object Object]" request (gmaps tried to load an invalid icon). Id of marker is now returned when creating a new marker. This means it can be edited straight away without the user first having to refresh markers.

--- a/TheJobMap/war/jobmap.css
+++ b/TheJobMap/war/jobmap.css
@@ -190,7 +190,7 @@ h1,h2,h3,h4 {
 }
 #infoWindow.company,
 #infoWindow.random {
-	min-width: 275px;
+	min-width: 300px;
 }
 #infoWindow #desc {
 	overflow: auto;
@@ -204,7 +204,8 @@ h1,h2,h3,h4 {
 	font-weight: bold;
 }
 #infoWindow .creationDate,
-#infoWindow .category {
+#infoWindow .category,
+#infoWindow .numApply {
 	font-style: italic;
 }
 #infoWindow.view button,
